新增个人中心页面

--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -6,3 +6,7 @@
 @button-global-border-radius: 0px;
 @button-primary-bg-color: #000000;
 @button-default-bg-color: #FFFFFF;
+
+@cell-font-size: 14px;
+
+@checkbox-icon-color-checked: #000000;
