新增银行卡绑定，提现，附近的店等页面

--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -5,6 +5,8 @@
 
 @button-global-border-radius: 0px;
 @button-primary-bg-color: #393a3e;
+@button-primary-active-bg-color: #666666;
+@button-primary-disabled-bg-color: #999999;
 @button-default-bg-color: #FFFFFF;
 
 @cell-font-size: 14px;
@@ -12,3 +14,5 @@
 @checkbox-icon-color-checked: #000000;
 
 @swiper-indicator-active-color: #000000;
+
+@search-cancel-font-color: #393a3e;
